{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 268,
  "lineage": "6da54b5b-13c0-b19b-f06c-5084a18308eb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.15.150",
            "association_id": "eipassoc-05f4f891f97b853f6",
            "domain": "vpc",
            "id": "eipalloc-0f8cd47941b4d1c7c",
            "network_interface": "eni-0a60da862d2b171e2",
            "private_dns": "ip-10-0-15-150.eu-west-1.compute.internal",
            "private_ip": "10.0.15.150",
            "public_dns": "ec2-52-50-216-87.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.50.216.87",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_network_interface.multi-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "three",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.15.152",
            "association_id": "eipassoc-0c139089d3dcd5f22",
            "domain": "vpc",
            "id": "eipalloc-039933cce2f38355b",
            "network_interface": "eni-0a60da862d2b171e2",
            "private_dns": "ip-10-0-15-152.eu-west-1.compute.internal",
            "private_ip": "10.0.15.152",
            "public_dns": "ec2-52-48-225-145.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.225.145",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_network_interface.multi-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "two",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.15.151",
            "association_id": "eipassoc-0a3de6548e602c2e6",
            "domain": "vpc",
            "id": "eipalloc-0c5780597de5a64e0",
            "network_interface": "eni-0a60da862d2b171e2",
            "private_dns": "ip-10-0-15-151.eu-west-1.compute.internal",
            "private_ip": "10.0.15.151",
            "public_dns": "ec2-52-209-108-55.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.209.108.55",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "depends_on": [
            "aws_network_interface.multi-ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apple_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf4d9e82813fcdb5",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-02fa35ee347919974",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-02fa35ee347919974",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-081cd4c8f1bbb8d85",
            "private_dns": "ip-10-0-10-118.eu-west-1.compute.internal",
            "private_ip": "10.0.10.118",
            "public_dns": "ec2-18-203-69-85.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.69.85",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d9223cd47bd13e75",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0382fe3ebec54d1d7",
            "tags": {
              "Name": "apple_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028a6812d5e5283ff"
            ]
          },
          "depends_on": [
            "aws_security_group.app_security_group",
            "aws_subnet.public-subnet-alpha",
            "data.aws_ami.app_ami",
            "data.template_file.app_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "banana_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf4d9e82813fcdb5",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-005d89d87ba11ebab",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-005d89d87ba11ebab",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-0810f20e2d9d96389",
            "private_dns": "ip-10-0-11-44.eu-west-1.compute.internal",
            "private_ip": "10.0.11.44",
            "public_dns": "ec2-34-247-32-172.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.247.32.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0931f209956b8a6e2",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fd2f8b56a480df6f",
            "tags": {
              "Name": "banana_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028a6812d5e5283ff"
            ]
          },
          "depends_on": [
            "aws_security_group.app_security_group",
            "aws_subnet.public-subnet-beta",
            "data.aws_ami.app_ami",
            "data.template_file.app_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db2_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0ca2c458ca34608",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0f67974b800630f6d",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f67974b800630f6d",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-032a8f9e443625aeb",
            "private_dns": "ip-10-0-15-227.eu-west-1.compute.internal",
            "private_ip": "10.0.15.227",
            "public_dns": "ec2-34-245-52-31.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.245.52.31",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08a2ce6fab7ebaed3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d298f5599bad3263",
            "tags": {
              "Name": "mongo-db2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081660f0e32036180"
            ]
          },
          "depends_on": [
            "aws_security_group.db-security-group",
            "aws_subnet.private-subnet-db",
            "data.aws_ami.db_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db3_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0ca2c458ca34608",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-03bd873a2e8e5dc06",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-03bd873a2e8e5dc06",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-07eb948f2dcc0d023",
            "private_dns": "ip-10-0-15-76.eu-west-1.compute.internal",
            "private_ip": "10.0.15.76",
            "public_dns": "ec2-34-251-7-54.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.251.7.54",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-03f6ad3782a45a77a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d298f5599bad3263",
            "tags": {
              "Name": "mongo-db3"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081660f0e32036180"
            ]
          },
          "depends_on": [
            "aws_security_group.db-security-group",
            "aws_subnet.private-subnet-db",
            "data.aws_ami.db_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db_instance1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0b0ca2c458ca34608",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0f351659bf79bec88",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0f351659bf79bec88",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-0f61b650573920185",
            "private_dns": "ip-10-0-15-148.eu-west-1.compute.internal",
            "private_ip": "10.0.15.148",
            "public_dns": "ec2-63-33-44-127.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.44.127",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-026906ec65142df98",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d298f5599bad3263",
            "tags": {
              "Name": "mongo-db1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-081660f0e32036180"
            ]
          },
          "depends_on": [
            "aws_security_group.db-security-group",
            "aws_subnet.private-subnet-db",
            "data.aws_ami.db_ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "elk_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-021e743779bca02b4",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c785c0d7e24a6629",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c785c0d7e24a6629",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-0fff11120948cda4b",
            "private_dns": "ip-10-0-14-68.eu-west-1.compute.internal",
            "private_ip": "10.0.14.68",
            "public_dns": "ec2-34-244-130-137.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.244.130.137",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0d42834f0099fb50f",
                "volume_size": 10,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f54ad85a336cd982",
            "tags": {
              "Name": "elk-TeamELK"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08af2180a6c9fd931"
            ]
          },
          "depends_on": [
            "aws_security_group.elk_security_group",
            "aws_subnet.public-subnet-elk",
            "data.aws_ami.elk_ami",
            "data.template_file.app_elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "grapes_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cf4d9e82813fcdb5",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-0c42c0a229b835b71",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-0c42c0a229b835b71",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "DevOpsEngineering3637",
            "monitoring": false,
            "primary_network_interface_id": "eni-0103c0d74a6ad2bad",
            "private_dns": "ip-10-0-12-123.eu-west-1.compute.internal",
            "private_ip": "10.0.12.123",
            "public_dns": "ec2-3-248-182-181.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.248.182.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0bde2eaa2858c9304",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0768f2785b65014c7",
            "tags": {
              "Name": "grapes_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-028a6812d5e5283ff"
            ]
          },
          "depends_on": [
            "aws_security_group.app_security_group",
            "aws_subnet.public-subnet-gamma",
            "data.aws_ami.app_ami",
            "data.template_file.app_init"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_access",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-04ae6c1fe72b5f548",
            "owner_id": "135928476890",
            "tags": {
              "Name": "internet_gateway_eng3637"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_private_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 102,
                "to_port": 0
              }
            ],
            "id": "acl-0fa7a0d309de8c5b7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0d298f5599bad3263"
            ],
            "tags": {
              "Name": "acl_private_sub"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_subnet.private-subnet-db",
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_public_elk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 102,
                "to_port": 0
              }
            ],
            "id": "acl-09396ab9a39d02b6f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0f54ad85a336cd982"
            ],
            "tags": {
              "Name": "acl_public_elk"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_subnet.public-subnet-elk",
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl_public_sub",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 102,
                "to_port": 0
              }
            ],
            "id": "acl-0ae8a49fc992107a3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              }
            ],
            "owner_id": "135928476890",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0382fe3ebec54d1d7",
              "subnet-0768f2785b65014c7",
              "subnet-0fd2f8b56a480df6f"
            ],
            "tags": {
              "Name": "acl_public_sub"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_subnet.public-subnet-alpha",
            "aws_subnet.public-subnet-beta",
            "aws_subnet.public-subnet-gamma",
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "multi-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-0a60da862d2b171e2",
            "private_dns_name": "ip-10-0-15-151.eu-west-1.compute.internal",
            "private_ip": "10.0.15.151",
            "private_ips": [
              "10.0.15.150",
              "10.0.15.151",
              "10.0.15.152"
            ],
            "private_ips_count": 2,
            "security_groups": [
              "sg-0ecb745646511c822"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d298f5599bad3263"
          },
          "depends_on": [
            "aws_subnet.private-subnet-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0dac7df775aa23d96",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04ae6c1fe72b5f548",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_tb_eng3637"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_internet_gateway.internet_access",
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_alpha",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-073f7488cacaaaab0",
            "route_table_id": "rtb-0dac7df775aa23d96",
            "subnet_id": "subnet-0382fe3ebec54d1d7"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.public-subnet-alpha"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_beta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08570963af9729652",
            "route_table_id": "rtb-0dac7df775aa23d96",
            "subnet_id": "subnet-0fd2f8b56a480df6f"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.public-subnet-beta"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f30476ee9205230c",
            "route_table_id": "rtb-0dac7df775aa23d96",
            "subnet_id": "subnet-0d298f5599bad3263"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.private-subnet-db"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_elk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc43bfe6be4e340f",
            "route_table_id": "rtb-0dac7df775aa23d96",
            "subnet_id": "subnet-0f54ad85a336cd982"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.public-subnet-elk"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_route_table_gamma",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b11d52835bd18261",
            "route_table_id": "rtb-0dac7df775aa23d96",
            "subnet_id": "subnet-0768f2785b65014c7"
          },
          "depends_on": [
            "aws_route_table.route_table",
            "aws_subnet.public-subnet-gamma"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-028a6812d5e5283ff",
            "description": "security group for app instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.13.0/24"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "id": "sg-028a6812d5e5283ff",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.13.0/24"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "public_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "public security group"
            },
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-security-group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-081660f0e32036180",
            "description": "security group for the db",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081660f0e32036180",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "db-security-group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_security_groups"
            },
            "timeouts": null,
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elk_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-08af2180a6c9fd931",
            "description": "security group for ELK",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.13.0/24"
                ],
                "description": "",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "id": "sg-08af2180a6c9fd931",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.13.0/24"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "elk_security_group",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elk-security-group"
            },
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-db",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0d298f5599bad3263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.15.0/24",
            "id": "subnet-0d298f5599bad3263",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "db-private-subnet"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-alpha",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0382fe3ebec54d1d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-0382fe3ebec54d1d7",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "public-subnet-alpha"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-beta",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0fd2f8b56a480df6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.11.0/24",
            "id": "subnet-0fd2f8b56a480df6f",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "public-subnet-beta"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-elk",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0f54ad85a336cd982",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.14.0/24",
            "id": "subnet-0f54ad85a336cd982",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "elk_public_subnet"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-gamma",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-0768f2785b65014c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.12.0/24",
            "id": "subnet-0768f2785b65014c7",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "public-subnet-gamma"
            },
            "vpc_id": "vpc-0503eb59adb50c53d"
          },
          "depends_on": [
            "aws_vpc.ENG3637_FP"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ENG3637_FP",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0503eb59adb50c53d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a0cb1c40c155b53a",
            "default_route_table_id": "rtb-0ac55b864003c89c3",
            "default_security_group_id": "sg-0ecb745646511c822",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0503eb59adb50c53d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ac55b864003c89c3",
            "owner_id": "135928476890",
            "tags": {
              "Name": "ENG3637_FP-vpc"
            }
          }
        }
      ]
    }
  ]
}